CL: - Add missing fields to the testtol - Implement FakeOpenSearchServer - Add unit tests for Monitoring class - Add unit tests for ServerSelector class - Add LCVO flags in monitoring.hpp and indexerConnector.cpp

--- a/src/shared_modules/indexer_connector/CMakeLists.txt
+++ b/src/shared_modules/indexer_connector/CMakeLists.txt
@@ -47,4 +47,4 @@ set_target_properties(indexer_connector PROPERTIES
 )
 
 add_subdirectory(testtool)
-#add_subdirectory(tests)
+add_subdirectory(tests)
