--- a/src/shared_modules/content_manager/CMakeLists.txt
+++ b/src/shared_modules/content_manager/CMakeLists.txt
@@ -19,6 +19,7 @@ include_directories(${SRC_FOLDER})
 include_directories(${SRC_FOLDER}/headers)
 include_directories(${SRC_FOLDER}/external/nlohmann)
 include_directories(${SRC_FOLDER}/external/curl/include/curl)
+include_directories(${SRC_FOLDER}/external/lzma/src/liblzma/api)
 
 include_directories(${SHARED_MODULES})
 include_directories(${SHARED_MODULES}/utils)
@@ -28,6 +29,7 @@ include_directories(${SHARED_MODULES}/content_manager/src/components)
 
 # Link directories
 link_directories(${SRC_FOLDER})
+link_directories(${SRC_FOLDER}/external/lzma/build/)
 link_directories(${SHARED_MODULES}/router/build)
 link_directories(${SHARED_MODULES}/http-request/build)
 
